<resources>
    <string name="app_name">ToDo</string>

    <string name="home">Home</string>
    <string name="add_journal">Add</string>
    <string name="profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="logo_cropped">Logo Cropped</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="register_here">Register Here</string>
    <string name="register">REGISTER</string>
    <string name="name">Full Name</string>
    <string name="sign_up">Sign Up to continue</string>
    <string name="sign_in">Sign In to continue</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="login_here">Login Here</string>
    <string name="user_profile_string">User Profile</string>
    <string name="logout">LOGOUT</string>
    <string name="location">Location</string>
    <string name="add_item">Add New Entry</string>
    <string name="journal_name">Title</string>
    <string name="thoughts">Task Description</string>
    <string name="save">Save</string>
    <string name="your_journal_entries">To-Do</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>