<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Login">

    <!--gradient background that is to be displayed at the top-half of the screen-->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/toolbar_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!--constraint layout for all the fields present in the login screen-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/curved_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <!--login text at the top of the layout-->
        <TextView
            android:id="@+id/login_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_condensed_black"
            android:letterSpacing="0.1"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#3498DB"
            android:textSize="65sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="-50dp"/>

        <!--small text message for sign up-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_heading"
            app:layout_constraintVertical_bias="0"
            android:text="@string/sign_in"
            android:textColor="#3498DB"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <!--input field for email-->
        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="25dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintWidth_percent="0.9"

            android:hint="@string/email"
            android:background="@drawable/login_signup_edit_text"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="22sp"
            tools:ignore="RtlSymmetry"/>

        <!--input field for password-->
        <EditText
            android:id="@+id/pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"

            android:background="@drawable/login_signup_edit_text"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingEnd="15dp"
            android:textSize="22sp"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="20dp"
            app:layout_constraintWidth_percent="0.9"
            tools:ignore="RtlSymmetry" />

        <!--clickable text to direct to the registration activity-->
        <TextView
            android:id="@+id/forgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/pass"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="25dp"
            android:text="Forgot Password?"
            android:textColor="#3498DB"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintVertical_bias="0"
            />

        <!--clickable button for Login-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintVertical_bias="0.17"
            android:background="@drawable/button_edit"
            android:text="@string/login"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="25dp"
            tools:ignore="InvalidId" />

        <!--text message at the bottom of the login button-->
        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintStart_toStartOf="@id/loginButton"
            app:layout_constraintEnd_toEndOf="@id/loginButton"
            android:text="@string/don_t_have_an_account"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintVertical_bias="0"
            />

        <!--clickable text to direct to the registration activity-->
        <TextView
            android:id="@+id/register_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintStart_toEndOf="@id/login_text"
            app:layout_constraintEnd_toEndOf="@id/loginButton"
            android:text="@string/register_here"
            android:textColor="#3498DB"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintVertical_bias="0"
            />

        <ProgressBar
            android:id="@+id/progressBarLog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_here"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:visibility="invisible"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="181dp"
            tools:layout_editor_absoluteY="489dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--cropped app logo to be displayed at the top of the screen in front
        of gradient background-->
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/text_logo"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/logo_cropped" />

</androidx.constraintlayout.widget.ConstraintLayout>