<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".SignUp">

    <!--gradient background that is to be displayed at the top-half of the screen-->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/toolbar_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!--constraint layout for all the fields present in the login screen-->

    <!--cropped app logo to be displayed at the top of the screen in front
        of gradient background-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/curved_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.77"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83">

        <!--register text at the top of the layout-->
        <TextView
            android:id="@+id/register_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_condensed_black"
            android:letterSpacing="0.1"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#3498DB"
            android:textSize="55sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/full_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.17" />

        <!--small text message for sign up-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="#3498DB"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/full_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_heading"
            app:layout_constraintVertical_bias="0" />

        <!--input field for user's name-->
        <EditText
            android:id="@+id/full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_signup_edit_text"
            android:hint="@string/name"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="20sp"
            android:paddingEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintWidth_percent="0.9"
            tools:ignore="RtlSymmetry" />

        <!--input field for email-->
        <EditText
            android:id="@+id/reg_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_signup_edit_text"
            android:hint="@string/email"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="20sp"
            android:paddingEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/full_name"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintWidth_percent="0.9"
            tools:ignore="RtlSymmetry" />

        <!--input field for password-->
        <EditText
            android:id="@+id/reg_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_signup_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="20sp"
            android:paddingEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_email"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent="0.9"
            tools:ignore="RtlSymmetry" />

        <!--input field for confirm password-->
        <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_signup_edit_text"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="20sp"
            android:paddingEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_pass"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent="0.9"
            tools:ignore="RtlSymmetry" />

        <!--clickable button for Registration-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@drawable/button_edit"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_pass"
            app:layout_constraintVertical_bias="0.17"
            app:layout_constraintWidth_percent="0.9"
            tools:ignore="InvalidId" />

        <!--text message at the bottom of the login button-->
<!--        <TextView-->
<!--            android:id="@+id/register_text"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="@string/already_have_an_account"-->
<!--            android:textSize="18sp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="@id/registerBtn"-->
<!--            app:layout_constraintHorizontal_bias="0.2"-->
<!--            app:layout_constraintStart_toStartOf="@id/registerBtn"-->
<!--            app:layout_constraintTop_toBottomOf="@id/registerBtn"-->
<!--            app:layout_constraintVertical_bias="0" />-->

        <!--clickable text to direct to the registration activity-->
        <TextView
            android:id="@+id/or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="OR,"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerBtn" />

<!--        <TextView-->
<!--            android:id="@+id/login_here"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="@string/login_here"-->
<!--            android:textColor="#1E90FF"-->
<!--            android:textSize="18sp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="@id/registerBtn"-->
<!--            app:layout_constraintHorizontal_bias="0.2"-->
<!--            app:layout_constraintStart_toEndOf="@id/register_text"-->
<!--            app:layout_constraintTop_toBottomOf="@id/registerBtn"-->
<!--            app:layout_constraintVertical_bias="0" />-->

        <ProgressBar
            android:id="@+id/progressBarReg"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/confirm_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/full_name"
            tools:layout_editor_absoluteY="222dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/text_logo"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/logo_cropped"
        android:layout_marginTop="5dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_google"
        android:scaleType="center"
        android:elevation="0dp"
        app:elevation="3dp"
        app:borderWidth="0dp"
        app:tint="@null"
        app:maxImageSize="55dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:elevation="0dp"
        android:src="@drawable/ic_facebook"
        app:elevation="3dp"
        android:scaleType="centerCrop"
        android:layout_marginBottom="10dp"
        app:borderWidth="0dp"
        app:maxImageSize="62dp"
        app:tint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_white"
        android:elevation="0dp"
        android:src="@drawable/ic_twitter"
        app:elevation="3dp"
        app:borderWidth="0dp"
        app:tint="@null"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:maxImageSize="55dp"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>