<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/toolbar_background"
        android:elevation="16dp"
        android:orientation="vertical">

        <!-- background layout settings of the app bar-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="6dp"
                android:layout_weight="3"
                android:background="@drawable/toolbar_background"
                android:orientation="horizontal"
                android:padding="1dp"
                tools:ignore="NestedWeights">

                <!--activity heading text-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="-5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:letterSpacing="0.1"
                    android:padding="10dp"
                    android:text="@string/user_profile_string"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="-10dp"
        android:background="@drawable/toolbar_background"
        android:padding="15dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profilePicture"
            android:layout_width="200dp"
            android:layout_height="2000dp"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@drawable/user_icon"
            app:shapeAppearance="@style/Circular" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginTop="150dp"
            android:backgroundTint="#D2D2D2"
            android:src="@drawable/ic_edit"
            app:fabSize="normal"
            app:maxImageSize="35dp"
            tools:ignore="SpeakableTextPresentCheck" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="105dp"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.05"
            android:text="User Details"
            android:textAllCaps="true"
            android:textColor="@color/light_blue"
            android:textSize="28sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:paddingStart="5dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/userProfileFN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="#FA8072"
        android:fadingEdgeLength="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:paddingStart="5dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/userProfileEM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="4dp"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="#FA8072"
        android:fadingEdgeLength="4dp" />

    <!--bottom model sheet for edit-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/userDetailsEditBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_edit"
        android:drawableLeft="@drawable/ic_edit"
        app:tint="@color/white"
        android:fontFamily="@font/viga"
        android:hapticFeedbackEnabled="true"
        android:letterSpacing="0.1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Edit User Details"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/button_edit"
        android:drawableLeft="@drawable/ic_logout"
        android:fontFamily="@font/viga"
        android:hapticFeedbackEnabled="true"
        android:letterSpacing="0.1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:onClick="logout"/>

</LinearLayout>